core/admin/assets/sass/layouts/login.scss
/*
 * These styles control elements specific to the Ghost admin login screen.
 *
 * Table of Contents:
 * 
 *
 */

/* =============================================================================
   Login
   ============================================================================= */

.ghost-login {
    color: $midgrey;
    background: $darkgrey;

    @include breakpoint($mobile) {
        background: $darkgrey;
    }

    main { 
        top: 15px; 
        @include breakpoint($mobile) { top: 0; }
    }
}//.ghost-login

.login-box {
    max-width: 530px;
    margin: 240px auto; // TODO: Change this to proper vertical centering with JS
    padding: 0;

    @include breakpoint(630px) {
        max-width: 264px;
        text-align: center;
    }
}

#login {
    @include box-sizing(border-box);
    max-width: 530px;

    @include breakpoint(630px) {
        max-width: 264px;
    }

    div { // Yes. Really. Every Div.
        position:relative;
        margin:0 0 5px 0;
        background: lighten($darkgrey, 10%);
        float: left;

        @include breakpoint(630px) { margin-bottom: 1em; }
    }

    input {
        display:inline-block;
        clear:both;
        margin:0;
        padding: 8px 0 8px 8px;
        width: 188px;
        position: relative;
        border: none;
        color: #fff;
        font-size: 1.1em;
        font-weight: 200;
        background: transparent;
        box-shadow: none;
        @include transition(none);

        &:focus {
            background: lighten($darkgrey, 15%);
            border-color: #000;
        }

        @include breakpoint(630px) {
            width:236px;
            @include transition(none);
        }

    }

    .email-wrap {
        position:relative;
        @include icon($i-mail, 12px) {position:absolute;bottom:11px;left:8px;z-index:100;};
        margin-right: 3px;
        border-radius: 2px 0 0 2px;

        @include breakpoint(630px) {
            margin-right:0;
            border-radius: 2px;
        }

        .email {
            padding-left: 28px;
        }
    }

    .password-wrap {
        position:relative;
        @include icon($i-lock, 10px) {position:absolute;bottom:12px;left:11px;z-index:100;};
        border-radius: 0 2px 2px 0;

        @include breakpoint(630px) {
            border-radius: 2px;
        }

        .password {
            padding-left: 28px;
        }

    }

    button {
        width: 85px;
        height: 36px;
        margin:0 0 0 10px;
        padding: 0.5em 1.37em;
        min-height: 30px;
        min-width: 80px;
        box-shadow: rgba(255,255,255,0.15) 0 1px 0 inset;

        @include breakpoint(630px) {
            margin:0;
            width: 100%;
            margin-bottom: 1em;
        }
    }

    .meta {
        clear:both;
    }

    a {
        color: darken($midgrey, 10%);
        font-size: 0.9em;

        &:hover { 
            color: $lightgrey;
            text-decoration: none;
        }
    }

}

